# aoi-simulator

./: .gitignore  LICENSE  N_sources_lgfs_preemption.json  N_sources_lgfs_preemption_MASIF.json  N_sources_lgfs_preemption_MAX.json  README.md  basic_mm1.py  mean_aoi.py  plota.py  processa_basic_dm1_lcfs_s.py  processa_basic_dm1_lcfs_w.py  processa_basic_md1_lcfs_s.py  processa_basic_md1_lcfs_w.py  processa_basic_mm1.py  processa_basic_mm1_lcfs.py  processa_basic_mm1_lcfs_s.py  requirements.txt  setup.cfg  simula_basic_dm1.py  simula_basic_dm1_lcfs_s.py  simula_basic_md1_lcfs_s.py  simula_basic_mm1.py  simula_basic_mm1_lcfs.py  simula_basic_mm1_lcfs_s.py  teste.py
AoI/: AoIQueueNetwork.py  LcfsPreemption2.py  __init__.py  exemplo_2.py  mean_aoi.py
aoi-simulator/: AoICalc.py  LgfsMultiServerPreemption.py
aoi_simulator/: AoICalc.py  AoIQueueServer.py  LcfsPreemption.py  LgfsMultiServerNoPreemption.py  LgfsMultiServerPreemption.py  LgfsMultiServerPreemption2.py  LgfsMultiServerPreemptionW.py  LgfsPreemption.py  __init__.py
aoi_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_aux/: MRL.json  MRL_ln_02_05.json  MRL_weib_3.json  dissertacao_lcfs_c_lgfs_mw.json
experimentos/: mm1_ro_0.05.txt  mm1_ro_0.15.txt  mm1_ro_0.35.txt  mm1_ro_0.55.txt  mm1_ro_0.75.txt  mm1_ro_0.85.txt  mm1_ro_0.95.txt
plota/: N_sources_preemption.py  N_sources_preemption_exp.py  N_sources_preemption_weib.py  compara_filas_analit.py  compara_filas_lcfs.py  dist_e_vrm.py  en_multiplas_fontes_mm1 copy.py  en_valida_lcfs_s copy.py  mm1_lcfs_exp.py  mm1_lcfs_no_ord_exp.py  (+30 more)
(+218 files in other folders)
