[metadata]
name = aoi-simulator
version = 0.3.2
author = Paulo Prandel
author_email = pauloprandel@hotmail.com
description = Age of Information simulation package
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/pprandel/aoi-simulator
project_urls =
    Bug Tracker = https://github.com/pprandel/aoi-simulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    aoi-queueing-tool>=1.2.4
    matplotlib>=3.3.4
    scipy>=1.5.4
    reliability>=0.5.7

package_dir = 
packages = find_namespace:
python_requires = >=3.7

[options.packages.find]
where = src